[package]
name = "irony"
version = "0.1.0"
description = "From Iron, because Rust"
authors = ["Amanjeev Sethi <aj@amanjeev.com>"]
edition = "2018"
repository = "https://github.com/amanjeev/irony"
license-file = "LICENSE"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
